# VCut

./: AbstructOption.h  CMakeLists.txt  FFOptionsCheck.cpp  FFOptionsCombo.cpp  FileLine.cpp  FileLine.h  README.md  VCut.pro  batch.cpp  batch.h  choosefile.cpp  choosefile.h  default.json  ffmpegcontroller.cpp  ffmpegcontroller.h  ffmpegwidget.cpp  ffmpegwidget.h  ffoptions.cpp  ffoptions.h  fileinfo.cpp  fileinfo.h  filelist.cpp  filelist.h  filestruct.cpp  filestruct.h  getfile.cpp  getfile.h  hmstime.cpp  hmstime.h  infoline.cpp  infoline.h  initlizer.cpp  initlizer.h  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchwidget.cpp  (+19 more)
